# mcpscr-lite

./: .gitignore  README.md  __main__.py  presets.md  pyproject.toml
mcpscr/: core.py  generator.py  javaparser.py  logger.py  randomiser.py  utils.py
mcpscr/api/: api_resources.json  construct.py
mcpscr/api/parser/: converter.py  parser.py
mcpscr/api/resources/: base.py  constants.py
mcpscr/parser/: converter.py  parser.py
presets/server/: chaos.json
