[tool.poetry]
name = "mcpscr"
version = "0.0.1"
description = "mcpscr-lite"
authors = ["SammygoodTunes"]

[tool.poetry.dependencies]
python = "^3.12"
javalang = "^0.13.0"

[tool.poetry.dev-dependencies]
# pytest = "^8.3.3"

[tools.poetry.scripts]
game = "mcpscr.__main__:main"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"